--- a/cv.html
+++ b/cv.html
@@ -10,11 +10,22 @@
             background-color: rgb(208, 213, 213);
         }
     </style>
+
     <script>
+         function onBack(){
+            history.back();
+        }
+        function onNext(){
+            window.open("./create-cv.html", "_self");
+        }
     </script>
 
 </head>
 <body>
+    <div>
+        <button onclick="onBack()" style="border-radius: 50%;">&laquo;</button>
+        <button onclick="onNack()" style="border-radius: 50%;">&raquo;</button>
+    </div>
     <div>
         <h1 style="text-align: center;">Resume</h1>
         <div>
@@ -30,15 +41,15 @@
         </div>
         <div>
             <p class="pBlock">Profile Summery</p>
-            <p id="skill"></p>
+            <ul id="skill"></ul>
         </div>
         <div>
             <p class="pBlock">Experience</p>
-            <p id="exp"></p>
+            <ul id="exp"></ul>
         </div>
         <div>
             <p class="pBlock">Academic Summery</p>
-            <p id="edu"></p>
+            <ul id="edu"></ul>
         </div>
         <div>
             <p class="pBlock">Personal Details</p>
@@ -59,6 +70,10 @@
             <p style="margin: 0px;" id="date"> </p>
             Place : <p style="margin: 0px;" id="place"></p>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
     <script>
         window.onload = function(){
@@ -68,17 +83,40 @@
             document.getElementById('address').innerHTML= "&#128204;" + localStorage.getItem('address');
             document.getElementById('email').innerHTML= "&#9993;  " + localStorage.getItem('email');
             document.getElementById('contact').innerHTML= "&#128222; " + localStorage.getItem('contact');
-            document.getElementById('edu').innerHTML=localStorage.getItem('edu');
-            document.getElementById('exp').innerHTML=localStorage.getItem('exp');
+            // document.getElementById('edu').innerHTML=localStorage.getItem('edu');
+            // document.getElementById('exp').innerHTML=localStorage.getItem('exp');
             document.getElementById('declaration').innerHTML=localStorage.getItem('declaration');
-            document.getElementById('skill').innerHTML=localStorage.getItem('skill');
-            document.getElementById('gender').innerHTML=localStorage.getItem('gender');
-            document.getElementById('dob').innerHTML=localStorage.getItem('dob');
-            document.getElementById('nationality').innerHTML=localStorage.getItem('nationality');
-            document.getElementById('lang').innerHTML=localStorage.getItem('lang');
-            document.getElementById('marital').innerHTML=localStorage.getItem('marital');
+            // document.getElementById('skill').innerHTML=localStorage.getItem('skill');
+            document.getElementById('gender').innerHTML= "Gender : " + localStorage.getItem('gender');
+            document.getElementById('dob').innerHTML= "DOB : " + localStorage.getItem('dob');
+            document.getElementById('nationality').innerHTML= "Naationality : " + localStorage.getItem('nationality');
+            document.getElementById('lang').innerHTML= "Known languages : " + localStorage.getItem('lang');
+            document.getElementById('marital').innerHTML= "Marital status : " + localStorage.getItem('marital');
             document.getElementById('date').innerHTML= "Date : " + date.getDate() + "/" + date.getMonth() + "/" + date.getFullYear();
+            var expList = localStorage.getItem('exp1').toString().split(",");
+            console.log(expList.length);
+            for(var i=0; i< expList.length; i++){
+                var li = document.createElement('li');
+                li.innerHTML = expList[i];
+                document.getElementById('exp').appendChild(li);
+            }
 
+            var skillList = localStorage.getItem('skill1').toString().split(",");
+            console.log(skillList.length);
+            for(var i=0; i< skillList.length; i++){
+                var li = document.createElement('li');
+                li.innerHTML = skillList[i];
+                document.getElementById('skill').appendChild(li);
+            }
+
+            var eduList = localStorage.getItem('edu1').toString().split(",");
+            console.log(eduList.length);
+            for(var i=0; i< eduList.length; i++){
+                var li = document.createElement('li');
+                li.innerHTML = eduList[i];
+                document.getElementById('edu').appendChild(li);
+            }
+            // window.print();     
         }
     </script>
 </body>
