--- a/cv.html
+++ b/cv.html
@@ -116,7 +116,7 @@
                 li.innerHTML = eduList[i];
                 document.getElementById('edu').appendChild(li);
             }
-            // window.print();     
+            window.print();     
         }
     </script>
 </body>
