--- a/cv.html
+++ b/cv.html
@@ -79,10 +79,10 @@
         window.onload = function(){
             var date = new Date();
             document.getElementById('objective').innerHTML=localStorage.getItem('objective');
-            document.getElementById('name').innerHTML= "&#128100; " + localStorage.getItem('name');
-            document.getElementById('address').innerHTML= "&#128204;" + localStorage.getItem('address');
-            document.getElementById('email').innerHTML= "&#9993;  " + localStorage.getItem('email');
-            document.getElementById('contact').innerHTML= "&#128222; " + localStorage.getItem('contact');
+            document.getElementById('name').innerHTML= localStorage.getItem('name');
+            document.getElementById('address').innerHTML= localStorage.getItem('address');
+            document.getElementById('email').innerHTML= localStorage.getItem('email');
+            document.getElementById('contact').innerHTML= localStorage.getItem('contact');
             // document.getElementById('edu').innerHTML=localStorage.getItem('edu');
             // document.getElementById('exp').innerHTML=localStorage.getItem('exp');
             document.getElementById('declaration').innerHTML=localStorage.getItem('declaration');
